выполнение основного и усложненного задания урока №12

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                         <div class="main-controls__item screen">
                             <div class="main-controls__select">
                                 <select name="views-select">
-                                    <option value="" selected>Тип экранов</option>
+                                    <option value="0" selected>Тип экранов</option>
                                     <option value="500">Простых 500руб * n</option>
                                     <option value="700">Сложных 700руб * n</option>
                                     <option value="800">Интерактивных 800руб * n</option>
